# DesktopCounter

./: .gitignore  README.md
hardware/: chassis.FCStd
software/firmware/: Cargo.toml  README.md  build.rs
software/firmware/.cargo/: config.toml
software/firmware/src/: config.rs  const_default.rs  count.rs  main.rs  maths.rs  menustate.rs  storage.rs
software/firmware/src/tasks/: handle_button.rs  handle_neopixel.rs  handle_storage.rs  mod.rs  storage.rs
